--- a/css/landing-styles.css
+++ b/css/landing-styles.css
@@ -73,7 +73,7 @@ body {
 }
 
 .navbar a {
-    color: rgb(12, 11, 11);
+    color: white;
     text-decoration: none;
     padding: 10px;
     position: relative;
