--- a/css/about-style.css
+++ b/css/about-style.css
@@ -2,8 +2,8 @@
 .about-hero {
 	position: relative;
 	height: 60vh;
-	background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../assets/OIP.jpg');
-	background-size: cover;
+	background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../assets/about-us.jpg');
+	background-size: contain;
 	background-position: center;
 	display: flex;
 	align-items: center;
@@ -67,6 +67,11 @@
 	margin: 40px auto;
 }
 
+.timeline-item.visible {
+	opacity: 1;
+    transform: translateY(0);
+}
+
 .timeline::after {
 	content: '';
 	position: absolute;
@@ -82,6 +87,12 @@
 	padding: 10px 40px;
 	position: relative;
 	width: 50%;
+	opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+}
+.timeline-item:hover {
+	transform: translateY(-10px);
 }
 
 .timeline-item:nth-child(odd) {
