--- a/css/landing-styles.css
+++ b/css/landing-styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-/* landing-style.css */
 /* General Reset */
 * {
     margin: 0;
@@ -9,53 +7,10 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
     background-color: #f4f4f4;
 }
 
-.content:hover{
-    transform: translateY(-30px);
-}
-/* Hero Section Styling */
-.hero {
-    position: relative;
-    height: 100vh;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    padding: 0 20px;
-}
-
-#bg-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-}
-
-.hero-content {
-    z-index: 1;
-}
-
-.hero h1 {
-    font-size: 4em;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    margin-bottom: 10px;
-}
-
-.hero h2 {
-    font-size: 1.8em;
-    margin-top: 10px;
-    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-}
-
-/* Navigation Links within Hero - Centered */
+/* Navigation Styles */
 .navbar {
     position: absolute;
     top: 20px;
@@ -102,6 +57,52 @@ body {
 
 .navbar a:hover::after {
     transform: scaleX(1);
+}
+
+/* Active Link Styling */
+.nav-link.active {
+    color: #ff5722; /* Active link color */
+    font-weight: bold;
+    text-decoration: none;
+}
+
+/* Hero Section Styling */
+.hero {
+    position: relative;
+    height: 100vh;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 0 20px;
+}
+
+#bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.hero-content {
+    z-index: 1;
+}
+
+.hero h1 {
+    font-size: 4em;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+}
+
+.hero h2 {
+    font-size: 1.8em;
+    margin-top: 10px;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 /* CTA Button Style */
@@ -181,39 +182,10 @@ footer {
 }
 
 .social-links a {
-    color: #ff5722;
+    color: white;
     text-decoration: none;
 }
 
 .social-links a:hover {
-    color: #e64a19;
-}
-
-/* Media Queries for Mobile Responsiveness */
-@media (max-width: 768px) {
-    .alternating-section .content {
-        flex-direction: column;
-    }
-
-    .alternating-section img,
-    .alternating-section .text {
-        width: 100%;
-    }
-
-    .hero h1 {
-        font-size: 3em;
-    }
-
-    .hero h2 {
-        font-size: 1.4em;
-    }
-
-    .navbar ul {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .navbar li {
-        font-size: 1.5em;
-    }
+    color: #ff5722;
 }
